<resources>
    <string name="app_name">Melanoma App</string>
    <string name="new_user_signup">New User?<b>SignUp</b></string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="Aboutapp">About App</string>
    <string name="rateus">RateUs</string>
    <string name="Darkmode">Dark Mode</string>
    <string name="lang">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="navigation_Drawer_open">Open navigation drawer</string>
    <string name="navigation_Drawer_close">Close navigation drawer</string>
    <string name="Check">Check</string>
    <string name="doctors">Doctors</string>
    <string name="guide">Guide</string>
    <string name="chat">Chat</string>
    <string name="type">type</string>
    <string name="Knowmore">Know more</string>
    <string name="melanoma">Melanoma</string>
    <string name="nevus">Nevus</string>
    <string name="BeginKeratosis">Begin Keratosis</string>
    <string name="VascularLesion">Vascular Lesion</string>
    <string name="BasalCellCarcinoma">Basal Cell Carcinoma</string>
    <string name="ActininKeratosis">Actinin Keratosis</string>
    <string name="Dermatofibroma">Dermatofibroma</string>
    <string name="Settings">Settings</string>
    <string name="causes">Causes</string>
    <string name="melano_causes_1">
              Melanoma occurs when something goes wrong in the melanin producing \n cells (melanocytes) that give color to your skin.\n
              Normally, skin cells develop in a controlled and  orderly way — healthy new cells push \n older cells toward your skins surface,
        where they die and even tually fall off.\n But when some cells develop DNA damage, new cells may begin to grow out of control and \n can eventually form a mass ofcancerous cells.
               </string>
    <string name="melano_causes_2">
  UV light does not  cause  all melanomas, especially those that occur in  \n places onyour  body that do not receive exposure to sunlight.\n This indicates that other factors may contribute to your risk of melanoma.\n
        Factors that may increase your risk of melanoma include: \n
               </string>
    <string name="melano_causes_3">
        * Fair skin:  Having less pigment (melanin) in your skin means you have less protection from damaging UV radiation. \n
        If you have blond or red hair, light-colored eyes, and freckle or sunburn easily, you\'re more likely to develop melanoma \n
        than is someone with a darker complexion.\n
        But melanoma can develop in people with darker complexions, including Hispanic people and black people.
               </string>
    <string name="melano_causes_4">
        * A history of sunburn:  One or more severe, blistering sunburns can  \n
        increase your risk of melanoma.
               </string>
    <string name="melano_causes_5">
       * Excessive ultraviolet (UV) light exposure:  Exposure to UV radiation,
        \n which comes from the sun and from tanning lights and beds, \n
        can increase the risk of skin cancer, including melanoma.

               </string>
    <string name="melano_causes_6">
        * Living closer to the equator or at a higher elevation:  People living closer to the earth\'s equator,\n
        where the sun\'s rays are more direct,experience higher amounts of UV
        radiation than do those living farther north or south. In addition,
        if you live at a high elevation, you\'re exposed to more UV radiation.
               </string>
    <string name="melano_causes_7">
       * Having many moles or unusual moles:  Having more than 50 ordinary moles on your body indicates
        an increased risk of melanoma.\n Also, having an unusual type of mole
        increases the risk of melanoma.
        \n Known medicallyas dysplastic nevi, these tend to be larger than normal moles and
        have irregular borders and a mixture of colors.
               </string>
    <string name="melano_causes_8">
       * A family history of melanoma:  If a close relative — such as a parent,
        child or sibling — has had melanoma, \n
        you have a greater chance of developing a melanoma, too.
               </string>
    <string name="melano_causes_9">
      * Weakened immune system:  People with weakened immune systemshave an increased risk of melanoma
        and other skin cancers.\n
        Your immune system may be impaired if you take medicine to suppress the immune system,
        such as after an organ transplant, or if you have a disease that impairs the
        immune system, such as AIDS.

               </string>
    <string name="melano_symptoms_1">
        Melanomas can develop anywhere on your body.
        They most often develop in areas that have had exposure to the sun,
        such as your back, legs,arms and face.

               </string>
    <string name="melano_symptoms_2">
        Melanomas can also occur in areas that don\'t receive much sun exposure,
        such as the soles of your feet, palms of your hands and finger nail beds.
        These hidden melanomas are more common in people with darker skin.

               </string>
    <string name="melano_symptoms_3">
        The first melanoma signs and symptoms often are: \n
        * A change in an existing mole.\n
        * The development of a new pigmented or unusual-looking growth on your skin. \n
         Melanoma doesn\'t always begin as a mole. It can also occur on otherwise normal-appearing skin.

               </string>
    <string name="melano_symptoms_4">
        Normal moles are generally a uniform color — such as tan,
        brown or black —with a distinct border separating the mole from your surrounding skin. \n
        They are oval or round and usually smaller than 1/4 inch
        (about 6 millimeters) in diameter— the size of a pencil eraser.
               </string>
    <string name="melano_symptoms_5">
        Most moles begin appearing in childhood and new
        moles may form until about age 40. By the time they are adults,
        most people have between 10 and 40moles. Moles may change in
        appearance over time and some may even disappear with age.
               </string>
    <string name="melano_symptoms_6">
        To help you identify characteristics of unusual moles that may indicate melanomas or
        other skin cancers, think of the letters ABCDE:

               </string>
    <string name="melano_symptoms_7">
     * A is for asymmetrical shape: Look for moles with irregular shapes,
        such as two very different-looking halves.\n
     * B is for irregular border: Look for moles with irregular, notched
        or scalloped borders — characteristics of melanomas.
               </string>
    <string name="melano_symptoms_8">
     * C is for changes in color: Look for growths that have many colors or an
        uneven distribution of color.\n
     * D is for diameter: Look for new growth in a mole larger than 1/4 inch(about 6 millimeters).
               </string>
    <string name="melano_symptoms_9">
     * E is for evolving: Look for changes over time, such as a mole that grows in
        size or that changes color or shape. Moles may also evolve to develop
        new signs and symptoms, such as new itchiness or bleeding.


               </string>
    <string name="melano_treatment_staging_1"> Staging  </string>
    <string name="melano_treatment_1">

        Test results will show whether you have melanoma and if it has spread
        to other parts of the body.The melanoma will be given a stage of 0-4,
        usually written in Roman numerals. The most important feature of a melanoma in
        predicting its outcome is its thickness.\n \n
            * stage 0 : is less than 0.1mm.\n
            * stage 1 : less than 2mm.\n
            * stage 2 : greater than 2mm.\n
            * stage 3  : spread to lymph nodes and stage IV spread to distant skin and/or other parts of the body.\n\n
        The presence of ulceration also predicts a poor outcome. If distant spread is suspected, CT scans
        of the chest, abdomen and pelvis are performed. The blood test LDH can sometimes
        be useful to assess metastatic disease.
    </string>
    <string name="melano_treatment_early_staging">  Early-stage melanoma  </string>
    <string name="melano_treatment_2">

      * Surgery (wide local excision) can be curative for thin melanomas and
        requires that the melanoma be removed as well as more normal-looking skin around
        the melanoma (usually between 5mm and10mm).\n\n
      * Many people with early melanoma don’t need to have lymph nodes
        removed. However, in somecases, you may have a sentinel lymph node biopsy
        which removes the first lymph node themelanoma may have spread to.\n\n

      * The removal of the lymph nodes can cause side effects such as swelling in your neck,
        armpit orgroin. This is called  lymphoedema.\n\n

      * If there is a risk that the melanoma could come back,
        you may be offered additional treatments.These can
        include immunotherapy and targeted therapy.

     </string>
    <string name="melano_treatment_advanced">  Advanced melanoma  </string>
    <string name="melano_treatment_3">

        Treatment for advanced melanoma, where the cancer has spread to lymph nodes,
        internal organs orbones,
        may include surgery, radiation therapy targeted therapy or immunotherapy.\n\n

       * Surgery : may be used to treat metastatic melanoma that involves other parts of the skin.
        Surgery may also still be possible if the melanoma has spread to
        other organs but will depend on the part of the body that is affected.\n\n

      * Targeted therapy : drugs attack specific genetic changes (mutations) that allow melanomas
        to growand spread while minimising harm to healthy cells.
        It is most commonly used for melanomas thathave spread to other organs or
        if it has come back after treatment.\n\n
      * Immunotherapy : uses drugs to stimulate the body\'s immune system in order to recognise
        and fight melanoma cancer cells. Ipilimumab, nivolumab and pembrolizumab
        are three immun other apydrugs approved for treatment of advanced melanoma.




     </string>
    <string name="melano_prevention_1">

    * Avoiding excessive exposure to UV radiation reduces the risk of melanoma.\n
    * Avoiding excessive exposure to ultraviolet radiation can reduce the risk of skin cancer.

    </string>
    <string name="melano_prevention_2">
        This can be achieved by:\n\n
        * avoiding sunburn.\n\n
        * wearing clothes that protect against the sun.\n\n
        * using sunscreen with a minimum sun protection factor (SPF) of 15,
        but preferably SPF 20-30, with 4- or 5-star UVA protection.


    </string>
    <string name="melano_prevention_3">

        * liberally applying sunscreen about half an hour before going out,
        and applying it again after half an hour.\n\n
        * reapplying every 2 hours and after swimming to maintain adequate protection.\n\n
        * avoiding the highest sun intensity between 11 am and 3 pm by finding shade.\n\n
        * protecting children by keeping them in the shade, with clothing,
        and by applying SPF 50+ sunscreen keeping infants out of direct sunlight.

    </string>
    <string name="melano_prevention_4">

       * Wearing sunscreen is not a reason to spend longer in the sun. Sun exposure should still be limited,
        where possible. People who work outdoors should take precautions to minimize exposure.\n\n
       * Doctors recommend avoiding tanning booths, lamps, and sunbeds.

    </string>
    <string name="melano_prevention_5_1">   What about vitamin D ?  </string>
</resources>