<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/profile_icon"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout_icon"/>






    </group>




    <item    android:title="Share">

    <menu>

        <group  android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/share_icon"/>


            <item
                android:id="@+id/Rateus"
                android:title="@string/rateus"
                android:icon="@drawable/rating"/>
        </group>

    </menu>



    </item>
















</menu>