<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".nada.Melanoma_Symptoms_Activity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Causestoolbar"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        />

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <androidx.cardview.widget.CardView

                android:id="@+id/card_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_1"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_2"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_3"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_4"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:id="@+id/card_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_5"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_6"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:id="@+id/card_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_7"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:id="@+id/card_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_8"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:id="@+id/card_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="30dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                >
                <LinearLayout

                    android:padding="10dp"
                    android:background="@drawable/main_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txt_9"

                        android:layout_gravity="center_horizontal"
                        android:text="@string/melano_symptoms_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_margin="10dp"

                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:textColor="@color/black"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>





        </LinearLayout>
    </ScrollView>








</LinearLayout>